--- a/src/main/resources/templates/mandje.html
+++ b/src/main/resources/templates/mandje.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="nl" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="fragments::head(title= 'Voorstellingen')"></head>
+<head th:replace="fragments::head(title= 'Winkelmand')"></head>
 <body>
 <nav th:replace="fragments::nav"></nav>
 
