--- a/src/main/resources/templates/reservatie.html
+++ b/src/main/resources/templates/reservatie.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="nl" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="fragments::head(title= 'Voorstelling')">
+<head th:replace="fragments::head(title= 'Bevestiging')">
 </head>
 <body><nav th:replace="fragments::nav"></nav>
 
