--- a/src/main/resources/templates/bevestig.html
+++ b/src/main/resources/templates/bevestig.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="nl" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="fragments::head(title= 'Voorstelling')">
+<head th:replace="fragments::head(title= 'Bevestiging')">
 </head>
 <body>
 <nav th:replace="fragments::nav"></nav>
@@ -8,10 +8,14 @@
 
 <div class="jumbotron">
     <div class="container top-buffer">
-        <div class="card" sec:authorize="isAuthenticated()" th:if="*{klant} != null">
-            <h5 class="card-header text-white bg-secondary">Bevestig bestelling</h5>
+        <div class="row">
 
-            <div class="card-body">
+            <div class="col-md-3"></div>
+            <div class="col-md-6">
+        <div class="card " sec:authorize="isAuthenticated()" th:if="*{klant} != null">
+            <h5 class="card-header text-white bg-secondary align-items-center justify-content-center">Bevestig bestelling</h5>
+
+            <div class="card-body align-items-center justify-content-center">
                 <h5 class="card-title" th:text="${klant.voornaam} + ' ' + ${klant.familienaam}"></h5>
                 <p class="card-text" th:text="${klant.adres.straat} + ' ' + ${klant.adres.huisnr}"></p>
                 <p class="card-text" th:text="${klant.adres.postcode} + ' ' + ${klant.adres.gemeente}"></p>
@@ -19,6 +23,9 @@
                     <input class="btn btn-info mt-3" type="submit" value="Bevestig" name="bevestigen" >
                 </form>
             </div>
+        </div>
+            </div>
+            <div class="col-md-3"></div>
         </div>
 
     </div>
