--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -4,10 +4,22 @@
     <title th:text="${title}"></title>
     <link rel="icon" th:href="@{/images/cultuurhuis.ico}" type="image/x-icon">
     <link rel="stylesheet" th:href="@{/css/style.css}">
-    <link rel="stylesheet" th:href="@{/css/bootstrap-4.1.3-dist/css/bootstrap.min.css}">
+    <script type="text/javascript" th:src="@{../css/bootstrap-4.1.3-dist/js/bootstrap.min.js}"></script>
+    <link rel="stylesheet" th:href="@{../css/bootstrap-4.1.3-dist/css/bootstrap.min.css}">
+    <script th:inline="javascript">
+       document.onscroll = function() {
+           if( $(window).scrollTop() > $('header').height() ) {
+               $('nav > div.navbar').removeClass('navbar-static-top').addClass('navbar-fixed-top');
+           }
+           else {
+               $('nav > div.navbar').removeClass('navbar-fixed-top').addClass('navbar-static-top');
+           }
+       };
+</script>
 </head>
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light navbar-fixed-top" th:fragment="nav" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
+<nav id="nav" style="position:fixed; width:100%; z-index: 9;" class="navbar navbar-expand-lg navbar-light bg-light navbar-static-top" th:fragment="nav" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml" >
+
   <a class="navbar-brand mb-0 h1 nav-link" href="/">Cultuurhuis</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
