--- a/src/main/resources/templates/klant.html
+++ b/src/main/resources/templates/klant.html
@@ -1,21 +1,22 @@
 <!doctype html>
 <html lang="nl" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="fragments::head(title='Cultuurhuis | Registratie')"></head>
+<head th:replace="fragments::head(title='Registreer')"></head>
 
 <body>
 <nav th:replace="fragments::nav"></nav>
 
 <div class="jumbotron">
-    <div class="container  top-buffer">
+    <div class="container  top-buffer " >
 
-        <div class="card top-buffer" >
+        <div th:if="${error} != null" th:text="${error}" class="alert alert-danger breed800"></div>
+        <div sec:authorize="isAuthenticated()" class="alert alert-danger breed800">U bent al aangemeld.</div>
+        <div class="card top-buffer breed800" sec:authorize="isAnonymous()">
+
             <div class="card  ">
-
-                <h5 class="card-header text-white bg-secondary">Maak een nieuwe account</h5>
+                <h5 class="card-header text-white bg-secondary"><u>Registreer</u></h5>
                 <div class="card-body">
-                    <form class="form-group" th:action='@{/registratie/registratie}' method='post' th:object="${nieuweKlantForm}" th:class="registratie">
+                    <form class="form-group" th:action='@{/registreer/ok}' method='post' th:object="${nieuweKlantForm}" th:class="registratie">
                         <div class="form-row">
-
                             <div class="form-group col-md-6">
                                 <label><b>Voornaam:</b></label>
                                 <span th:errors="*{voornaam}"></span>
@@ -64,8 +65,7 @@
                             <label name="gebruikersnaam" autocapitalize="off" autofocus="autofocus" required="required" for="user_gebruikersnaam">Gebruikersnaam:</label>
                         </dt>
                         <dd>
-                            <span th:errors="*{gebruikersnaam}"></span>
-                            <span th:if="${foutboodschap} != null" th:text="${foutboodschap}"></span>
+
                             <input th:field="*{gebruikersnaam}" name="gebruikersnaam" autocapitalize="off" autofocus="autofocus" required="required" class="form-control input py-1" type="text" id="user_gebruikersnaam" autocomplete="off" spellcheck="false">
                         </dd>
 
@@ -81,8 +81,6 @@
                             <label name="herhaalPaswoord" autocapitalize="off" autofocus="autofocus" required="required" for="user_herhaalPaswoord">Wachtwoord:</label>
                         </dt>
                         <dd>
-                            <span th:errors="*{herhaalPaswoord}"></span>
-                            <span th:if="${foutboodschap} != null" th:text="${foutboodschap}"></span>
                             <input th:field="*{herhaalPaswoord}" name="herhaalPaswoord" autocapitalize="off" autofocus="autofocus" required="required" class="form-control input py-1" type="text" id="user_herhaalPaswoord" autocomplete="off" spellcheck="false">
                         </dd>
 
