--- a/src/main/resources/templates/programmatie.html
+++ b/src/main/resources/templates/programmatie.html
@@ -7,7 +7,23 @@
 
 <div class="jumbotron">
  <div class="container">
+     <div class="row">
+         <div class="col-7">
      <h1 class="mt-3">Programmering </h1>
+             </div>
+         <div class="col">
+             <div class="pagination justify-content-end align-bottom">
+                 <a href="#">&laquo;</a>
+                 <a href="#">1</a>
+                 <a href="#">2</a>
+                 <a href="#">3</a>
+                 <a href="#">4</a>
+                 <a href="#">5</a>
+                 <a href="#">6</a>
+                 <a href="#">&raquo;</a>
+             </div>
+         </div>
+     </div>
     <div class="card top-buffer" th:each="voorstelling:${voorstellingen}" th:object="${voorstelling}">
         <div class="card  ">
 
@@ -22,11 +38,11 @@
 
                         <br>
                         <p class="card-text uitverkocht" th:if="*{uitverkocht}">UITVERKOCHT</p>
-                            <p class="card-text " th:if="not*{uitverkocht}" th:text="${voorstelling.vrijeplaatsen + ' tickets beschikbaar.' }"></p>
+                            <p class="card-text " th:if="not*{uitverkocht}">Tickets beschikbaar</p>
 
 
                             <a th:href="@{/voorstellingen/{id}(id=*{id})}" class="btn btn-info">meer info</a>
-                    </div>
+                        </div>
 
                     <div class="col">
                        <img class="img-fluid" th:src="@{/images/uitverkocht.png}" th:if="*{uitverkocht}"></img>
@@ -39,9 +55,9 @@
     </div>
 
 </div>
-</div></div>
+</div></div></div>
 <script  src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js" type="text/javascript"></script>
-<script type="text/javascript" src="css/bootstrap-4.1.3-dist/js/jquery-1.8.0.js"></script>
+
 <script type="text/javascript" src="css/bootstrap-4.1.3-dist/js/bootstrap.min.js"></script>
 </body>
 </html>
