--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -7,3 +7,15 @@
     position: relative;
 
 }
+.jumbocolor{
+
+}
+.navcolor{
+    background-color: #708594 !important;
+}
+.cardcolor {
+}
+
+.cardheadercolor{
+    background-color: #708593 !important;
+}
