--- a/src/main/resources/templates/bevestig.html
+++ b/src/main/resources/templates/bevestig.html
@@ -6,16 +6,16 @@
 <nav th:replace="fragments::nav"></nav>
 
 
-<div class="jumbotron">
+<div class="jumbotron jumbocolor">
     <div class="container top-buffer">
         <div class="row">
 
             <div class="col-md-3"></div>
             <div class="col-md-6">
-        <div class="card " sec:authorize="isAuthenticated()" th:if="*{klant} != null">
-            <h5 class="card-header text-white bg-secondary align-items-center justify-content-center">Bevestig bestelling</h5>
+        <div class="card  " sec:authorize="isAuthenticated()" th:if="*{klant} != null">
+            <h5 class="card-header text-white cardheadercolor align-items-center justify-content-center">Bevestig bestelling</h5>
 
-            <div class="card-body align-items-center justify-content-center">
+            <div class="card-body cardcolor align-items-center justify-content-center">
                 <h5 class="card-title" th:text="${klant.voornaam} + ' ' + ${klant.familienaam}"></h5>
                 <p class="card-text" th:text="${klant.adres.straat} + ' ' + ${klant.adres.huisnr}"></p>
                 <p class="card-text" th:text="${klant.adres.postcode} + ' ' + ${klant.adres.gemeente}"></p>
