--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -4,7 +4,7 @@
 
 <body>
 <nav th:replace="fragments::nav"></nav>
-<div class="jumbotron">
+<div class="jumbotron jumbocolor">
   <div class="container top-buffer">
     <div class="alert alert-danger">Er deed zich een fout voor!</div>
 
