--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -18,7 +18,7 @@
 </script>
 </head>
 
-<nav id="nav" style="position:fixed; width:100%; z-index: 9;" class="navbar navbar-expand-lg navbar-light bg-light navbar-static-top" th:fragment="nav" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml" >
+<nav id="nav" style="position:fixed; width:100%; z-index: 9;" class="navbar navbar-expand-lg navbar-light navcolor navbar-static-top" th:fragment="nav" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml" >
 
   <a class="navbar-brand mb-0 h1 nav-link" href="/">Cultuurhuis</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
