--- a/src/main/resources/templates/genre.html
+++ b/src/main/resources/templates/genre.html
@@ -3,15 +3,15 @@
 <head th:replace="fragments::head(title= 'Programmatie')"></head>
 <body>
 <nav th:replace="fragments::nav"></nav>
-<div class="jumbotron">
+<div class="jumbotron jumbocolor">
 
 <div class="container"  >
     <h1 th:text="${genrenaam}" class="mt-3"> </h1>
     <div class="card top-buffer" th:each="voorstelling:${voorstellingen}" th:object="${voorstelling}">
         <div class="card  ">
 
-            <h5 class="card-header text-white bg-secondary h2"> <u th:text="*{titel}"></u></h5>
-            <div class="card-body">
+            <h5 class="card-header text-white cardheadercolor h2"> <u th:text="*{titel}"></u></h5>
+            <div class="card-body cardcolor">
                 <div class="container">
                     <div class="row">
                         <div class="col-7">
