--- a/src/main/resources/templates/mandje.html
+++ b/src/main/resources/templates/mandje.html
@@ -4,12 +4,12 @@
 <body>
 <nav th:replace="fragments::nav"></nav>
 
-<div class="jumbotron">
+<div class="jumbotron jumbocolor">
     <div class="container top-buffer">
         <div class="card" th:if="${mandje} != null and not${mandje.isLeeg()}">
-            <h5 class="card-header text-white bg-secondary">Winkelmandje</h5>
+            <h5 class="card-header text-white cardheadercolor">Winkelmandje</h5>
 
-            <div class="card-body">
+            <div class="card-body cardcolor">
                 <table class="table">
                     <form method="post" th:action="@{/mandje/verwijderen}">
                         <thead>
