--- a/src/main/resources/templates/reservatie.html
+++ b/src/main/resources/templates/reservatie.html
@@ -4,15 +4,15 @@
 </head>
 <body><nav th:replace="fragments::nav"></nav>
 
-<div class="jumbotron">
+<div class="jumbotron jumbocolor">
     <div class="container top-buffer">
         <div th:if="not${geenfouten}" class="alert alert-danger" role="alert">
             Enkele transacties zijn niet geslaagd!
         </div>
         <div class="card" sec:authorize="isAuthenticated()">
-            <h5 class="card-header text-white bg-secondary">Confirmatie</h5>
+            <h5 class="card-header text-white cardheadercolor">Confirmatie</h5>
 
-            <div class="card-body">
+            <div class="card-body cardcolor">
                 <table class="table table-striped">
                     <thead>
                     <tr class="header">
@@ -38,9 +38,9 @@
         </div>
 
         <div class="card top-buffer" sec:authorize="isAuthenticated()" th:if="not${geenfouten}">
-            <h5 class="card-header text-white bg-alert">Niet geslaagd</h5>
+            <h5 class="card-header text-white cardheadercolor">Niet geslaagd</h5>
 
-            <div class="card-body">
+            <div class="card-body cardcolor">
                 <table class="table table-striped">
                     <thead>
                     <tr class="header">
